[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customf1"
version = "0.1.0"
description = "A Python package for calculating custom-weighted F1 scores."
authors = [
  { name = "James" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = []  # Doesn't need numpy or sklearn since code is pure Python

[project.urls]
Repository = "https://github.com/James-1Sun/Custom-F1"
